--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,12 @@
 </head>
 <body>
 
+<%= link_to "Home", root_path %>
+<%= link_to "About", about_path %>
+<%= link_to "Cakes", cakes_path %>
+<%= link_to "Cookies", cookies_path %>
+<%= link_to "Pies", pies_path %>
+<%= link_to "Contact", contact_path %>
 <%= yield %>
 
 </body>
