--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,5 @@
-<h1>Welcome to Healthy Desserts</h1>
-<p>Home of the healthiest desserts in New York!</p>
+<div class="jumbotron">
+	<h1>Welcome to Healthy Desserts</h1>
+	<p>Home of the healthiest desserts in New York!</p>
+	<cente><img src="http://wheretogetmarried.co.uk/dir/users_content/users_images/images/ab4c3aedcf4016c88341b5726fffe9f9.jpg"></cente>
+<div> 
