--- a/app/views/pages/pies.html.erb
+++ b/app/views/pages/pies.html.erb
@@ -1,2 +1,9 @@
-<h1>PIES</h1>
-<p>This is my pie page.</p>
+<table width="702" height="548" border="0" cellspacing="1" cellpadding="1">
+  <tr>
+    <td background="http://www.studbankimages.com/images/pies2.jpg" valign="bottom">
+    <p align="right">Our pies are made of the finest<br />
+    ingredients, all natural and cholestoral free. Treat<br />
+     yourself to the very best this holiday season! Just<br />
+      click onto the "Order" link above to order.</p><br /><br /></td>
+  </tr>
+</table>
