--- a/app/views/layouts/_navSection.html.erb
+++ b/app/views/layouts/_navSection.html.erb
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-inverse" role="navigation">
   <!-- Brand and toggle get grouped for better mobile display -->
   <div class="navbar-header">
-    <a class="navbar-brand" href="#">Heathly Desserts</a>
+    <p class="navbar-brand">Healthy Desserts </p>
   </div>
 
   <!-- Collect the nav links, forms, and other content for toggling -->
@@ -20,7 +20,6 @@
       <li><%= link_to "Order", order_path %></li>
       <li><%= link_to "Contact", contact_path %></li>
     </ul>
-       
       </li>
     </ul>
   </div><!-- /.navbar-collapse -->
