--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,7 @@
-<div class="jumbotron">
+<div class="jumbotron center">
 	<h1>Welcome to Healthy Desserts</h1>
-	<p>Home of the healthiest desserts in New York!</p>
+	<p>Home of the healthiest desserts in New York!</br>
+	<button type="button" class="btn btn-default">Log in</button>
+	<button type="button" class="btn btn-primary">Sign Up!</button></p>
 	<cente><img src="http://wheretogetmarried.co.uk/dir/users_content/users_images/images/ab4c3aedcf4016c88341b5726fffe9f9.jpg"></cente>
 <div> 
