--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,7 +1,7 @@
 <table width="702" height="548" border="0" cellspacing="1" cellpadding="1">
   <tr>
     <td background="http://www.studbankimages.com/images/abouta.jpg" valign="middle">
-    <h3><i>Our sole desire providing the premium products & services!</i></h3>
+    <h3><i>Our sole desire is providing premium products & services!</i></h3>
     <h3><i>Simply place your order and enjoy!</i></h3></td>
   </tr>
 </table>
