--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,13 +4,14 @@
   <title>HealthyDesserts</title>
   <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
+  <%= javascript_include_tag :defaults %>
   <%= csrf_meta_tags %>
 </head>
 <body>
 	<%= render 'layouts/navSection' %>
 	<div class="container">
 	<% flash.each do |name, msg| %>
-		<%= content_tag(:div, mst, class: "alert alert-#{name}") %>
+		<%= content_tag(:div, msg, class: "alert alert-info") %>
 	<% end %>
 		<%= yield %>
 	</div>
